# audiostreams

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.h.cmake
client/: CMakeLists.txt  temp.cpp
common/: CMakeLists.txt  audiostreams.proto  config.hpp.cmake  temp.c  version.cpp  version.hpp
server/: CMakeLists.txt  temp.cpp
src/: CMakeLists.txt  client.hpp  config.hpp.cmake  server.cpp  server.hpp
test/: CMakeLists.txt  client_test.cpp  server_test.cpp
